bucket colour change is now transition instead of jump, split up scss files, fix wave bugs

--- a/scss/colours.scss
+++ b/scss/colours.scss
@@ -6,14 +6,14 @@ $color-transparent: rgba(0,0,0,0);
 
 // Dynamic colours
 :root {
-	--color-one:   $color-white;
-	--color-two:   $color-white;
-	--color-three: $color-white;
-	--color-four:  $color-white;
+	--color-1:  $color-white;
+	--color-2:  $color-white;
+	--color-3:  $color-white;
+	--color-4:  $color-white;
 }
 
 // These variables are set using JS
-$color-one:    var(--color-one);
-$color-two:    var(--color-two);
-$color-three:  var(--color-three);
-$color-four:   var(--color-four);
+$color-one:    var(--color-1);
+$color-two:    var(--color-2);
+$color-three:  var(--color-3);
+$color-four:   var(--color-4);
